--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.marvelapp.home.presentation.view.MarvelCharacters">
+              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent" android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context="com.marvelapp.home.presentation.view.MarvelCharacters">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/marvel_character_recView"
-        android:layout_width="match_parent"
-        tools:listitem="@layout/marvel_home_ticket"
-        android:layout_height="match_parent" />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/marvel_character_recView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/marvel_home_ticket"/>
+    </LinearLayout>
 
+    <LinearLayout
+            android:id="@+id/loading_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".07"
+            android:visibility="gone">
+
+        <!-- Toggle Switch -->
+        <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/show_more_loading"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/marvel_character_recView"
+                app:layout_constraintVertical_bias="1"
+                app:lottie_autoPlay="true"
+                app:lottie_fileName="loading-animation.json"
+                app:lottie_loop="true"
+                app:lottie_speed="2.0"/>
+    </LinearLayout>
 
 </LinearLayout>
