--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="black_30_opacity">#4D000000</color>
+    <color name="black_75_opacity">#b3000000</color>
+    <color name="black_50_opacity">#80000000</color>
 </resources>
