--- a/app/src/main/res/layout/marvel_search_result_ticket.xml
+++ b/app/src/main/res/layout/marvel_search_result_ticket.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#CCCCCC"
-    android:orientation="horizontal">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="#CCCCCC"
+              android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/character_image_search_result"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_the_avengers" />
+            android:id="@+id/character_image_search_result"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/ic_the_avengers"/>
 
     <TextView
-        android:id="@+id/character_name_search_result"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
+            android:id="@+id/character_name_search_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            android:layout_margin="5dp"
+            android:textColor="#ffffff"
+            android:textSize="20sp"/>
 </LinearLayout>
