--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.marvelapp.home.presentation.view.MarvelCharacters">
+    tools:context="com.marvelapp.marvelcharacterhome.presentation.view.MarvelCharacters">
 
 
     <androidx.recyclerview.widget.RecyclerView
