--- a/app/src/main/res/layout/marvel_character_details_fragment.xml
+++ b/app/src/main/res/layout/marvel_character_details_fragment.xml
@@ -1,66 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_75_opacity"
+
     android:overScrollMode="never"
-    android:scrollbars="none">
+    android:scrollbars="none"
+    tools:context="com.marvelapp.marvelcharacterdetails.presentation.view.MarvelCharacterDetails">
 
     <LinearLayout
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical"
-        android:padding="5dp"
-        tools:context="com.marvelapp.marvelcharacterdetails.presentation.view.MarvelCharacterDetails">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
 
         <ImageView
             android:id="@+id/character_image_details_page"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:src="@drawable/ic_the_avengers" />
+            android:src="@drawable/ic_the_avengers"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_margin="5dp"
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <TextView
-                android:id="@+id/character_name_title_details_page"
+                android:id="@+id/character_name_title_page"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textColor="#ff0000" />
+                android:padding="5dp"
+                android:textColor="#ff0000"
+                android:visibility="gone" />
 
             <TextView
-                android:id="@+id/character_name_content_details_page"
+                android:id="@+id/character_name_content_page"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textColor="#ffffff" />
+                android:padding="5dp"
+                android:textColor="#ffffff"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/character_desc_title_details_page"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textColor="#ff0000" />
+                android:padding="5dp"
+                android:textColor="#ff0000"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/character_desc_content_details_page"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textColor="#ffffff" />
+                android:padding="5dp"
+                android:textColor="#ffffff"
+                android:visibility="gone" />
         </LinearLayout>
 
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/marvel_character_recView"
+
+            android:id="@+id/marvel_character_details_recView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="10dp"
+            android:nestedScrollingEnabled="false"
+            android:padding="5dp"
+            tools:listitem="@layout/marvel_character_details_ticket" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/show_more_loading"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            tools:listitem="@layout/marvel_home_ticket" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/marvel_character_recView"
+            app:layout_constraintVertical_bias="1"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="loading.json"
+            app:lottie_loop="true"
+            app:lottie_speed="1.0" />
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
