--- a/app/src/main/res/layout/fragment_marvel_base.xml
+++ b/app/src/main/res/layout/fragment_marvel_base.xml
@@ -17,6 +17,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:background="#ffffff"
         android:id="@+id/loading_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
